--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         
         <header>
-            <img src="image/logo-adare-restaurant.png" alt="logo for Adare Restaurant">
+            <img src="https://github.com/freezgames/leer-proces/blob/main/image/logo-adare-restaurant.png?raw=true" alt="logo for Adare Restaurant">
         </header>
     
         <nav>
